ros_ws/log/build_2021-12-06_19-43-02/lidar_udp_catch/stderr.log
  File "/home/itolab-chotaro/HDD/SBIR-sit/ros_ws/install/lidar_udp_catch/lib/python3.6/site-packages/lidar_udp_catch/lidar_udp_catch.py", line 25
    for i in range(43:44):
                     ^
SyntaxError: invalid syntax

